# PROJET_RESTAU

./: CMakeLists.txt  README.md  base_donnee.txt  insertion_produit.txt  insertion_tables.txt  main.cpp  style.css  view.cpp  view.h  view.ui
LIVRABLES_FINAUX/: Diagramme_classe_proto.drawio  base_donnee.txt  rapport design pattern.docx
View/: view.cpp  view.h
controller/: ViewController.cpp  ViewController.h  WorkerThread.cpp  WorkerThread.h
model/: CustomTimer.cpp  CustomTimer.h  Database.cpp  TableManger.cpp  TableManger.h  ViewModel.cpp  ViewModel.h  chefrang.cpp  chefrang.h  client.cpp  client.h  commis.cpp  commis.h  cuisinier.cpp  cuisinier.h  human.cpp  human.h  maitrehotel.cpp  maitrehotel.h  plongeur.cpp  plongeur.h  serveur.cpp  serveur.h
model/declaration/: Database.h  ViewModel.h  chefrang.h  commis.h  cuisinier.h  maitrehotel.h  serveur.h
model/implementation/: Database.cpp  ViewModel.cpp  chefrang.cpp  client.cpp  commis.cpp  cuisinier.cpp  human.cpp  maitrehotel.cpp  plongeur.cpp  serveur.cpp
